@@ -1,0 +1,79 @@
+# Generated by Django 2.2.5 on 2019-10-15 19:34
+
+from django.db import migrations, models
+import django.db.models.deletion
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('Application', '0001_initial'),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name='Account',
+            fields=[
+                ('Account_Id', models.AutoField(primary_key=True, serialize=False)),
+                ('Currency', models.CharField(max_length=5)),
+                ('Tax', models.FloatField()),
+                ('Tax_type', models.CharField(max_length=20)),
+                ('Late_Fees', models.FloatField()),
+                ('Due_Date', models.DateField()),
+                ('Due_Amount', models.FloatField()),
+            ],
+        ),
+        migrations.CreateModel(
+            name='Client',
+            fields=[
+                ('Client_Id', models.CharField(max_length=20, primary_key=True, serialize=False)),
+                ('Fname', models.CharField(max_length=50)),
+                ('Lname', models.CharField(max_length=50)),
+                ('Address_Line', models.TextField()),
+                ('City', models.CharField(max_length=30)),
+                ('State', models.CharField(max_length=30)),
+                ('Pin_Code', models.PositiveIntegerField()),
+                ('Email', models.EmailField(max_length=254)),
+                ('Phone', models.PositiveIntegerField()),
+            ],
+        ),
+        migrations.CreateModel(
+            name='Vendor',
+            fields=[
+                ('Vendor_Id', models.CharField(max_length=20, primary_key=True, serialize=False)),
+                ('Vendor_Name', models.CharField(max_length=100)),
+                ('Vendor_Category', models.CharField(max_length=10)),
+                ('Address_Line', models.TextField()),
+                ('City', models.CharField(max_length=30)),
+                ('State', models.CharField(max_length=30)),
+                ('Pin_Code', models.PositiveIntegerField()),
+                ('Email', models.EmailField(max_length=254)),
+                ('Phone', models.PositiveIntegerField()),
+            ],
+        ),
+        migrations.CreateModel(
+            name='Vendor_Account',
+            fields=[
+                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('Account_Id', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='Application.Account')),
+                ('Vendor_Id', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='Application.Vendor')),
+            ],
+        ),
+        migrations.CreateModel(
+            name='Transactions',
+            fields=[
+                ('Transaction_id', models.AutoField(primary_key=True, serialize=False)),
+                ('Transaction_Date', models.DateField()),
+                ('Transaction_amt', models.FloatField()),
+                ('Account_Id', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='Application.Account')),
+            ],
+        ),
+        migrations.CreateModel(
+            name='Client_Account',
+            fields=[
+                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('Account_Id', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='Application.Account')),
+                ('Client_Id', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='Application.Client')),
+            ],
+        ),
+    ]
